# mod-patching

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/actions/: rust-ci.yml
.github/workflows/: ci.yml  full-rust-ci.yml  publish.yml  rust-ci.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: maven.kt
buildSrc/src/main/kotlin/com/anatawa12/gradleRust/: CargoBuildTarget.kt  CargoBuildTask.kt  CargoExtension.kt  CargoProject.kt  CargoTestTask.kt  CargoToolChain.kt  EnvironmentProperties.kt  GradlePlugin.kt  READMD.md  Util.kt
cli-tool/: Cargo.toml  build.gradle.kts
cli-tool-publisher/: build.gradle.kts
cli-tool/src/: collector.rs  do-not-edit-header.txt  doing_error.rs  ext.rs  main.rs  patching_env.rs  select.rs  types.rs
docs/: source-patching-development.md
gradle-plugin/: build.gradle.kts
gradle-plugin-separated/: README.md  build.gradle.kts  do-not-edit-header.txt  license-info.md
gradle-plugin/src/main/java/com/anatawa12/modPatching/: CurseDownloadingMod.kt  ModPatch.kt  ModPatchContainer.kt  ModPatchingPlugin.kt  ModsContainer.kt  (+2 more)
mod-patching-gradle-plugin/: build.gradle.kts
resources-dev-lib/: build.gradle.kts
src/: main.rs  patching_env.rs  select.rs
src/main/java/com/anatawa12/modPatching/: CheckSignatureModification.kt  DeobfuscateSrg.kt  DownloadCurseModJar.kt  DownloadingMod.kt  GenerateBsdiffPatch.kt  ModPatch.kt  ModPatchContainer.kt  ModPatchingPlugin.kt  OnRepoPatchSource.kt  OnVCSPatchSource.kt  RenameSourceName.kt
(+127 files in other folders)
