[package]
name = "mod-patching-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
quick-error = "2"
