[package]
name = "mod-patching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
quick-error = "2"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
rayon = "1"
itertools = "0.10"
tempfile = "3"
yaml-rust = "0.4"
diffy = { path = "./diffy" }

[dev-dependencies]
serde_test = "1"
